[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/ui/main_menu.gd" type="Script" id=1]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -100.0
margin_right = 63.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBtn" type="Button" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Start"

[node name="LoadBtn" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Load"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Options"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadBtn" to="." method="_on_LoadBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
